external-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whereami
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "foo-backendconfig"}'
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http 
  selector:
    app: whereami
  type: ClusterIP
